--- a/ThinkSharer/ThinkSharer/Supporting Files/zh-Hans.lproj/Localizable.strings
+++ b/ThinkSharer/ThinkSharer/Supporting Files/zh-Hans.lproj/Localizable.strings
@@ -7,4 +7,12 @@
 */
 
 "thinkSharerCenter" = "思享者中心";
+"setting language" = "正在设置语言";
+"Account and security" = "账号与安全";
+"Privacy rights" = "隐私权限";
 "Language Settings" = "语言设置";
+"Help and feedback" = "帮助与反馈";
+"About us" = "关于我们";
+"Version update" = "版本更新";
+"Log out" = "退出登录";
+"客服咨询" = "客服咨询";
