--- a/ThinkSharer/ThinkSharer/Supporting Files/en.lproj/Localizable.strings
+++ b/ThinkSharer/ThinkSharer/Supporting Files/en.lproj/Localizable.strings
@@ -18,9 +18,14 @@
 "Version update" = "Version update";
 "Log out" = "Log out";
 
+//帮助与反馈
 "新手帮助" = "Rookie help";
 "视频中心" = "Video center";
 "使用手册" = "The manual";
 "常见问题" = "Common problems";
 "角色体验" = "Role experience";
+
 "客服咨询" = "Customer service consultation";
+"导师服务" = "Mentor services";
+"信息反馈" = "Information feedback";
+"提交" = "Submit";
